# CADD_threshold_app

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  about_text.md  app.py  comparing_metrics_text.md  data_loader.py  environment.yml  pyproject.toml  requirements.txt  server_logic.py  shiny-server.conf  specific_genes_text.md  ui_components.py
.github/: release-please-config.json
.github/workflows/: tests.yml
data/about_dataset_text/: dataset.md
data/paneldata/: panels_and_versions_summary.csv  panels_summary_2026-01-21.csv  panels_summary_2026-05-04.csv
data/paneldata/backup/: panels_summary_2025-11-20_backup.csv  panels_summary_2025-11-21_backup.csv  panels_summary_2026-05-04_backup.csv
markdowns/: about_text.md  comparing_metrics_text.md  developer_documentation.md  distributions.md  documentation.md  gene_panels_text.md  impressum.md  specific_genes_text.md
modules/: basic_bar_plot.py  basic_bar_plot_by_consequence.py  basic_bar_plot_consequence_pathogenic.py  basic_plot.py  compare_basic_plot.py  functions.py  functions_server_helpers.py  read_genes_from_list_or_file_functions.py  server_helpers.py  test.py
modules/panelapp/: calculate_panel_metrics_and_save.py  compare_csv_and_add_new_entries.py  get_panels_as_csv_list.py  get_specific_panel_info.py  main_panelapp.py  panel_app_http_error_handling.py  retrieve_panel_id_and_version.py
server/: __init__.py  data_processing.py  metrics.py  plots.py
src/cadd_threshold_app/: app.py  data_loader.py  main.py  server_logic.py  ui_components.py
src/cadd_threshold_app/markdowns/: about_text.md  about_text_2.md  comparing.md  comparing_metrics_text.md  distributions.md  gene_panels_text.md  impressum.md  specific_genes_text.md
src/cadd_threshold_app/modules/: basic_bar_plot.py  basic_bar_plot_by_consequence.py  basic_plot.py  compare_basic_plot.py  functions_server_helpers.py  read_genes_from_list_or_file_functions.py
src/cadd_threshold_app/modules/panelapp/: calculate_panel_metrics_and_save.py  compare_csv_and_add_new_entries.py  get_panels_as_csv_list.py  get_specific_panel_info.py  main_panelapp.py  panel_app_http_error_handling.py  retrieve_panel_id_and_version.py
www/: styles.css  test.py
