[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadd-threshold-app"
version = "0.0.3"
description = "Shiny-for-Python app for exploring ClinVar distributions across CADD score thresholds"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Cora Leifheit", email="cora.leifheit@bih-charite.de" },
    { name = "Max Schubach", email="max.schubach@bih-charite.de" },
]
keywords = ["shiny", "genomics", "cadd", "clinvar", "visualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = [
  "anywidget",
  "click",
  "numpy",
  "pandas",
  "plotly",
  "requests",
  "scikit-learn",
  "shiny",
  "shinywidgets",
]

[project.urls]
Homepage = "https://github.com/kircherlab/CADD_threshold_app"
Repository = "https://github.com/kircherlab/CADD_threshold_app"

[project.scripts]
cadd-threshold-app = "cadd_threshold_app.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cadd_threshold_app" = [
  "markdowns/*.md",
  "www/*.css",
]
